[tool.poetry]
packages = [
  { include = "haochi-cook-and-pass"},
]

[project]
name = "haochi-cook-and-pass"
version = "0.1.0"
description = "Distributed real-time multiplayer cooking game inspired by Family Style"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
  "pygame (>=2.6.1,<3.0.0)",
  "motor (>=3.7.1,<4.0.0)",
  "pymongo (>=4.16.0,<5.0.0)",
  "python-dotenv (>=1.2.2,<2.0.0)",
  "websockets (>=15.0.1,<16.0.0)",
]
authors = [
  { name = "Elisayan" },
]
license = "Apache-2.0"

[project.scripts]
haochi-game = "haochi_game.main:main"

[tool.poetry.dependencies]
pygame = "^2.6.1"
motor = "^3.7.1"
pymongo = "^4.16.0"
python-dotenv = "^1.2.2"
websockets = "^15.0.1"

[tool.poetry.group.dev.dependencies]
poetry = "^2.1.0"
poethepoet = "^0.37.0"
pytest = "^8.4.2"
pytest-asyncio = "^0.26.0"
ruff = "^0.11.13"

[tool.poe.tasks]
test = "pytest"
lint = "ruff check ."
run-client = "python -m haochi_game.main"

[tool.pytest.ini_options]
testpaths = [
  "haochi-cook-and-pass/client/tests",
  "haochi-cook-and-pass/server/tests",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
